--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="mois">
-        <form action="reponse.php" method="get">
+        <form action="reponse.php" method="post">
             <label for="name">Prenom :</label>
             <input type="text" id="name" name="name">
         
