--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <label for="email">Email :</label>
             <input type="email" id="email" name="email">
         
-            <label for="MS">Message :</label>
-            <input type="text" id="MS" name="MS">
+            <label for="message">Message :</label>
+            <input type="text" id="message" name="message">
         
             <input type="submit" value="Envoyer">
         </form>
